compiler/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FN
    SEMICOLON

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement_list -> empty
Rule 5     statement -> declaration
Rule 6     statement -> assignment
Rule 7     statement -> layer_def
Rule 8     statement -> return_stmt
Rule 9     declaration -> LET IDENTIFIER COLON type ASSIGN expression
Rule 10    declaration -> LET IDENTIFIER COLON type
Rule 11    assignment -> IDENTIFIER ASSIGN expression
Rule 12    layer_def -> LAYER IDENTIFIER LPAREN params RPAREN ARROW type LBRACE statement_list RBRACE
Rule 13    return_stmt -> RETURN expression
Rule 14    return_stmt -> RETURN
Rule 15    params -> param_list
Rule 16    params -> empty
Rule 17    param_list -> param_list COMMA param
Rule 18    param_list -> param
Rule 19    param -> IDENTIFIER COLON type
Rule 20    type -> TRIT
Rule 21    type -> INT8
Rule 22    type -> FLOAT16
Rule 23    type -> FLOAT32
Rule 24    type -> TERNARYTENSOR
Rule 25    expression -> expression PLUS expression
Rule 26    expression -> expression MINUS expression
Rule 27    expression -> expression TIMES expression
Rule 28    expression -> expression MATMUL expression
Rule 29    expression -> MINUS expression
Rule 30    expression -> IDENTIFIER LPAREN arguments RPAREN
Rule 31    expression -> TERNARYTENSOR LBRACKET integer_list RBRACKET LPAREN integer_list RPAREN
Rule 32    arguments -> expression_list
Rule 33    arguments -> empty
Rule 34    expression_list -> expression_list COMMA expression
Rule 35    expression_list -> expression
Rule 36    integer_list -> integer_list COMMA signed_integer
Rule 37    integer_list -> signed_integer
Rule 38    signed_integer -> INTEGER
Rule 39    signed_integer -> MINUS INTEGER
Rule 40    expression -> IDENTIFIER
Rule 41    expression -> INTEGER
Rule 42    expression -> FLOAT
Rule 43    empty -> <empty>

Terminals, with rules where they appear

ARROW                : 12
ASSIGN               : 9 11
COLON                : 9 10 19
COMMA                : 17 34 36
FLOAT                : 42
FLOAT16              : 22
FLOAT32              : 23
FN                   : 
IDENTIFIER           : 9 10 11 12 19 30 40
INT8                 : 21
INTEGER              : 38 39 41
LAYER                : 12
LBRACE               : 12
LBRACKET             : 31
LET                  : 9 10
LPAREN               : 12 30 31
MATMUL               : 28
MINUS                : 26 29 39
PLUS                 : 25
RBRACE               : 12
RBRACKET             : 31
RETURN               : 13 14
RPAREN               : 12 30 31
SEMICOLON            : 
TERNARYTENSOR        : 24 31
TIMES                : 27
TRIT                 : 20
error                : 

Nonterminals, with rules where they appear

arguments            : 30
assignment           : 6
declaration          : 5
empty                : 4 16 33
expression           : 9 11 13 25 25 26 26 27 27 28 28 29 34 35
expression_list      : 32 34
integer_list         : 31 31 36
layer_def            : 7
param                : 17 18
param_list           : 15 17
params               : 12
program              : 0
return_stmt          : 8
signed_integer       : 36 37
statement            : 2 3
statement_list       : 1 2 12
type                 : 9 10 12 19

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement_list -> . empty
    (5) statement -> . declaration
    (6) statement -> . assignment
    (7) statement -> . layer_def
    (8) statement -> . return_stmt
    (43) empty -> .
    (9) declaration -> . LET IDENTIFIER COLON type ASSIGN expression
    (10) declaration -> . LET IDENTIFIER COLON type
    (11) assignment -> . IDENTIFIER ASSIGN expression
    (12) layer_def -> . LAYER IDENTIFIER LPAREN params RPAREN ARROW type LBRACE statement_list RBRACE
    (13) return_stmt -> . RETURN expression
    (14) return_stmt -> . RETURN

  ! shift/reduce conflict for LET resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for LAYER resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
    $end            reduce using rule 43 (empty -> .)
    LET             shift and go to state 9
    IDENTIFIER      shift and go to state 10
    LAYER           shift and go to state 11
    RETURN          shift and go to state 12

  ! LET             [ reduce using rule 43 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 43 (empty -> .) ]
  ! LAYER           [ reduce using rule 43 (empty -> .) ]
  ! RETURN          [ reduce using rule 43 (empty -> .) ]

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    empty                          shift and go to state 4
    declaration                    shift and go to state 5
    assignment                     shift and go to state 6
    layer_def                      shift and go to state 7
    return_stmt                    shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (5) statement -> . declaration
    (6) statement -> . assignment
    (7) statement -> . layer_def
    (8) statement -> . return_stmt
    (9) declaration -> . LET IDENTIFIER COLON type ASSIGN expression
    (10) declaration -> . LET IDENTIFIER COLON type
    (11) assignment -> . IDENTIFIER ASSIGN expression
    (12) layer_def -> . LAYER IDENTIFIER LPAREN params RPAREN ARROW type LBRACE statement_list RBRACE
    (13) return_stmt -> . RETURN expression
    (14) return_stmt -> . RETURN

    $end            reduce using rule 1 (program -> statement_list .)
    LET             shift and go to state 9
    IDENTIFIER      shift and go to state 10
    LAYER           shift and go to state 11
    RETURN          shift and go to state 12

    statement                      shift and go to state 13
    declaration                    shift and go to state 5
    assignment                     shift and go to state 6
    layer_def                      shift and go to state 7
    return_stmt                    shift and go to state 8

state 3

    (3) statement_list -> statement .

    LET             reduce using rule 3 (statement_list -> statement .)
    IDENTIFIER      reduce using rule 3 (statement_list -> statement .)
    LAYER           reduce using rule 3 (statement_list -> statement .)
    RETURN          reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement_list -> empty .

    LET             reduce using rule 4 (statement_list -> empty .)
    IDENTIFIER      reduce using rule 4 (statement_list -> empty .)
    LAYER           reduce using rule 4 (statement_list -> empty .)
    RETURN          reduce using rule 4 (statement_list -> empty .)
    $end            reduce using rule 4 (statement_list -> empty .)
    RBRACE          reduce using rule 4 (statement_list -> empty .)


state 5

    (5) statement -> declaration .

    LET             reduce using rule 5 (statement -> declaration .)
    IDENTIFIER      reduce using rule 5 (statement -> declaration .)
    LAYER           reduce using rule 5 (statement -> declaration .)
    RETURN          reduce using rule 5 (statement -> declaration .)
    $end            reduce using rule 5 (statement -> declaration .)
    RBRACE          reduce using rule 5 (statement -> declaration .)


state 6

    (6) statement -> assignment .

    LET             reduce using rule 6 (statement -> assignment .)
    IDENTIFIER      reduce using rule 6 (statement -> assignment .)
    LAYER           reduce using rule 6 (statement -> assignment .)
    RETURN          reduce using rule 6 (statement -> assignment .)
    $end            reduce using rule 6 (statement -> assignment .)
    RBRACE          reduce using rule 6 (statement -> assignment .)


state 7

    (7) statement -> layer_def .

    LET             reduce using rule 7 (statement -> layer_def .)
    IDENTIFIER      reduce using rule 7 (statement -> layer_def .)
    LAYER           reduce using rule 7 (statement -> layer_def .)
    RETURN          reduce using rule 7 (statement -> layer_def .)
    $end            reduce using rule 7 (statement -> layer_def .)
    RBRACE          reduce using rule 7 (statement -> layer_def .)


state 8

    (8) statement -> return_stmt .

    LET             reduce using rule 8 (statement -> return_stmt .)
    IDENTIFIER      reduce using rule 8 (statement -> return_stmt .)
    LAYER           reduce using rule 8 (statement -> return_stmt .)
    RETURN          reduce using rule 8 (statement -> return_stmt .)
    $end            reduce using rule 8 (statement -> return_stmt .)
    RBRACE          reduce using rule 8 (statement -> return_stmt .)


state 9

    (9) declaration -> LET . IDENTIFIER COLON type ASSIGN expression
    (10) declaration -> LET . IDENTIFIER COLON type

    IDENTIFIER      shift and go to state 14


state 10

    (11) assignment -> IDENTIFIER . ASSIGN expression

    ASSIGN          shift and go to state 15


state 11

    (12) layer_def -> LAYER . IDENTIFIER LPAREN params RPAREN ARROW type LBRACE statement_list RBRACE

    IDENTIFIER      shift and go to state 16


state 12

    (13) return_stmt -> RETURN . expression
    (14) return_stmt -> RETURN .
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression MATMUL expression
    (29) expression -> . MINUS expression
    (30) expression -> . IDENTIFIER LPAREN arguments RPAREN
    (31) expression -> . TERNARYTENSOR LBRACKET integer_list RBRACKET LPAREN integer_list RPAREN
    (40) expression -> . IDENTIFIER
    (41) expression -> . INTEGER
    (42) expression -> . FLOAT

  ! shift/reduce conflict for IDENTIFIER resolved as shift
    LET             reduce using rule 14 (return_stmt -> RETURN .)
    LAYER           reduce using rule 14 (return_stmt -> RETURN .)
    RETURN          reduce using rule 14 (return_stmt -> RETURN .)
    $end            reduce using rule 14 (return_stmt -> RETURN .)
    RBRACE          reduce using rule 14 (return_stmt -> RETURN .)
    MINUS           shift and go to state 18
    IDENTIFIER      shift and go to state 19
    TERNARYTENSOR   shift and go to state 20
    INTEGER         shift and go to state 21
    FLOAT           shift and go to state 22

  ! IDENTIFIER      [ reduce using rule 14 (return_stmt -> RETURN .) ]

    expression                     shift and go to state 17

state 13

    (2) statement_list -> statement_list statement .

    LET             reduce using rule 2 (statement_list -> statement_list statement .)
    IDENTIFIER      reduce using rule 2 (statement_list -> statement_list statement .)
    LAYER           reduce using rule 2 (statement_list -> statement_list statement .)
    RETURN          reduce using rule 2 (statement_list -> statement_list statement .)
    $end            reduce using rule 2 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement_list statement .)


state 14

    (9) declaration -> LET IDENTIFIER . COLON type ASSIGN expression
    (10) declaration -> LET IDENTIFIER . COLON type

    COLON           shift and go to state 23


state 15

    (11) assignment -> IDENTIFIER ASSIGN . expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression MATMUL expression
    (29) expression -> . MINUS expression
    (30) expression -> . IDENTIFIER LPAREN arguments RPAREN
    (31) expression -> . TERNARYTENSOR LBRACKET integer_list RBRACKET LPAREN integer_list RPAREN
    (40) expression -> . IDENTIFIER
    (41) expression -> . INTEGER
    (42) expression -> . FLOAT

    MINUS           shift and go to state 18
    IDENTIFIER      shift and go to state 19
    TERNARYTENSOR   shift and go to state 20
    INTEGER         shift and go to state 21
    FLOAT           shift and go to state 22

    expression                     shift and go to state 24

state 16

    (12) layer_def -> LAYER IDENTIFIER . LPAREN params RPAREN ARROW type LBRACE statement_list RBRACE

    LPAREN          shift and go to state 25


state 17

    (13) return_stmt -> RETURN expression .
    (25) expression -> expression . PLUS expression
    (26) expression -> expression . MINUS expression
    (27) expression -> expression . TIMES expression
    (28) expression -> expression . MATMUL expression

    LET             reduce using rule 13 (return_stmt -> RETURN expression .)
    IDENTIFIER      reduce using rule 13 (return_stmt -> RETURN expression .)
    LAYER           reduce using rule 13 (return_stmt -> RETURN expression .)
    RETURN          reduce using rule 13 (return_stmt -> RETURN expression .)
    $end            reduce using rule 13 (return_stmt -> RETURN expression .)
    RBRACE          reduce using rule 13 (return_stmt -> RETURN expression .)
    PLUS            shift and go to state 26
    MINUS           shift and go to state 27
    TIMES           shift and go to state 28
    MATMUL          shift and go to state 29


state 18

    (29) expression -> MINUS . expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression MATMUL expression
    (29) expression -> . MINUS expression
    (30) expression -> . IDENTIFIER LPAREN arguments RPAREN
    (31) expression -> . TERNARYTENSOR LBRACKET integer_list RBRACKET LPAREN integer_list RPAREN
    (40) expression -> . IDENTIFIER
    (41) expression -> . INTEGER
    (42) expression -> . FLOAT

    MINUS           shift and go to state 18
    IDENTIFIER      shift and go to state 19
    TERNARYTENSOR   shift and go to state 20
    INTEGER         shift and go to state 21
    FLOAT           shift and go to state 22

    expression                     shift and go to state 30

state 19

    (30) expression -> IDENTIFIER . LPAREN arguments RPAREN
    (40) expression -> IDENTIFIER .

    LPAREN          shift and go to state 31
    PLUS            reduce using rule 40 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 40 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 40 (expression -> IDENTIFIER .)
    MATMUL          reduce using rule 40 (expression -> IDENTIFIER .)
    LET             reduce using rule 40 (expression -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 40 (expression -> IDENTIFIER .)
    LAYER           reduce using rule 40 (expression -> IDENTIFIER .)
    RETURN          reduce using rule 40 (expression -> IDENTIFIER .)
    $end            reduce using rule 40 (expression -> IDENTIFIER .)
    RBRACE          reduce using rule 40 (expression -> IDENTIFIER .)
    COMMA           reduce using rule 40 (expression -> IDENTIFIER .)
    RPAREN          reduce using rule 40 (expression -> IDENTIFIER .)


state 20

    (31) expression -> TERNARYTENSOR . LBRACKET integer_list RBRACKET LPAREN integer_list RPAREN

    LBRACKET        shift and go to state 32


state 21

    (41) expression -> INTEGER .

    PLUS            reduce using rule 41 (expression -> INTEGER .)
    MINUS           reduce using rule 41 (expression -> INTEGER .)
    TIMES           reduce using rule 41 (expression -> INTEGER .)
    MATMUL          reduce using rule 41 (expression -> INTEGER .)
    LET             reduce using rule 41 (expression -> INTEGER .)
    IDENTIFIER      reduce using rule 41 (expression -> INTEGER .)
    LAYER           reduce using rule 41 (expression -> INTEGER .)
    RETURN          reduce using rule 41 (expression -> INTEGER .)
    $end            reduce using rule 41 (expression -> INTEGER .)
    RBRACE          reduce using rule 41 (expression -> INTEGER .)
    COMMA           reduce using rule 41 (expression -> INTEGER .)
    RPAREN          reduce using rule 41 (expression -> INTEGER .)


state 22

    (42) expression -> FLOAT .

    PLUS            reduce using rule 42 (expression -> FLOAT .)
    MINUS           reduce using rule 42 (expression -> FLOAT .)
    TIMES           reduce using rule 42 (expression -> FLOAT .)
    MATMUL          reduce using rule 42 (expression -> FLOAT .)
    LET             reduce using rule 42 (expression -> FLOAT .)
    IDENTIFIER      reduce using rule 42 (expression -> FLOAT .)
    LAYER           reduce using rule 42 (expression -> FLOAT .)
    RETURN          reduce using rule 42 (expression -> FLOAT .)
    $end            reduce using rule 42 (expression -> FLOAT .)
    RBRACE          reduce using rule 42 (expression -> FLOAT .)
    COMMA           reduce using rule 42 (expression -> FLOAT .)
    RPAREN          reduce using rule 42 (expression -> FLOAT .)


state 23

    (9) declaration -> LET IDENTIFIER COLON . type ASSIGN expression
    (10) declaration -> LET IDENTIFIER COLON . type
    (20) type -> . TRIT
    (21) type -> . INT8
    (22) type -> . FLOAT16
    (23) type -> . FLOAT32
    (24) type -> . TERNARYTENSOR

    TRIT            shift and go to state 34
    INT8            shift and go to state 35
    FLOAT16         shift and go to state 36
    FLOAT32         shift and go to state 37
    TERNARYTENSOR   shift and go to state 38

    type                           shift and go to state 33

state 24

    (11) assignment -> IDENTIFIER ASSIGN expression .
    (25) expression -> expression . PLUS expression
    (26) expression -> expression . MINUS expression
    (27) expression -> expression . TIMES expression
    (28) expression -> expression . MATMUL expression

    LET             reduce using rule 11 (assignment -> IDENTIFIER ASSIGN expression .)
    IDENTIFIER      reduce using rule 11 (assignment -> IDENTIFIER ASSIGN expression .)
    LAYER           reduce using rule 11 (assignment -> IDENTIFIER ASSIGN expression .)
    RETURN          reduce using rule 11 (assignment -> IDENTIFIER ASSIGN expression .)
    $end            reduce using rule 11 (assignment -> IDENTIFIER ASSIGN expression .)
    RBRACE          reduce using rule 11 (assignment -> IDENTIFIER ASSIGN expression .)
    PLUS            shift and go to state 26
    MINUS           shift and go to state 27
    TIMES           shift and go to state 28
    MATMUL          shift and go to state 29


state 25

    (12) layer_def -> LAYER IDENTIFIER LPAREN . params RPAREN ARROW type LBRACE statement_list RBRACE
    (15) params -> . param_list
    (16) params -> . empty
    (17) param_list -> . param_list COMMA param
    (18) param_list -> . param
    (43) empty -> .
    (19) param -> . IDENTIFIER COLON type

    RPAREN          reduce using rule 43 (empty -> .)
    IDENTIFIER      shift and go to state 39

    params                         shift and go to state 40
    param_list                     shift and go to state 41
    empty                          shift and go to state 42
    param                          shift and go to state 43

state 26

    (25) expression -> expression PLUS . expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression MATMUL expression
    (29) expression -> . MINUS expression
    (30) expression -> . IDENTIFIER LPAREN arguments RPAREN
    (31) expression -> . TERNARYTENSOR LBRACKET integer_list RBRACKET LPAREN integer_list RPAREN
    (40) expression -> . IDENTIFIER
    (41) expression -> . INTEGER
    (42) expression -> . FLOAT

    MINUS           shift and go to state 18
    IDENTIFIER      shift and go to state 19
    TERNARYTENSOR   shift and go to state 20
    INTEGER         shift and go to state 21
    FLOAT           shift and go to state 22

    expression                     shift and go to state 44

state 27

    (26) expression -> expression MINUS . expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression MATMUL expression
    (29) expression -> . MINUS expression
    (30) expression -> . IDENTIFIER LPAREN arguments RPAREN
    (31) expression -> . TERNARYTENSOR LBRACKET integer_list RBRACKET LPAREN integer_list RPAREN
    (40) expression -> . IDENTIFIER
    (41) expression -> . INTEGER
    (42) expression -> . FLOAT

    MINUS           shift and go to state 18
    IDENTIFIER      shift and go to state 19
    TERNARYTENSOR   shift and go to state 20
    INTEGER         shift and go to state 21
    FLOAT           shift and go to state 22

    expression                     shift and go to state 45

state 28

    (27) expression -> expression TIMES . expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression MATMUL expression
    (29) expression -> . MINUS expression
    (30) expression -> . IDENTIFIER LPAREN arguments RPAREN
    (31) expression -> . TERNARYTENSOR LBRACKET integer_list RBRACKET LPAREN integer_list RPAREN
    (40) expression -> . IDENTIFIER
    (41) expression -> . INTEGER
    (42) expression -> . FLOAT

    MINUS           shift and go to state 18
    IDENTIFIER      shift and go to state 19
    TERNARYTENSOR   shift and go to state 20
    INTEGER         shift and go to state 21
    FLOAT           shift and go to state 22

    expression                     shift and go to state 46

state 29

    (28) expression -> expression MATMUL . expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression MATMUL expression
    (29) expression -> . MINUS expression
    (30) expression -> . IDENTIFIER LPAREN arguments RPAREN
    (31) expression -> . TERNARYTENSOR LBRACKET integer_list RBRACKET LPAREN integer_list RPAREN
    (40) expression -> . IDENTIFIER
    (41) expression -> . INTEGER
    (42) expression -> . FLOAT

    MINUS           shift and go to state 18
    IDENTIFIER      shift and go to state 19
    TERNARYTENSOR   shift and go to state 20
    INTEGER         shift and go to state 21
    FLOAT           shift and go to state 22

    expression                     shift and go to state 47

state 30

    (29) expression -> MINUS expression .
    (25) expression -> expression . PLUS expression
    (26) expression -> expression . MINUS expression
    (27) expression -> expression . TIMES expression
    (28) expression -> expression . MATMUL expression

    PLUS            reduce using rule 29 (expression -> MINUS expression .)
    MINUS           reduce using rule 29 (expression -> MINUS expression .)
    TIMES           reduce using rule 29 (expression -> MINUS expression .)
    MATMUL          reduce using rule 29 (expression -> MINUS expression .)
    LET             reduce using rule 29 (expression -> MINUS expression .)
    IDENTIFIER      reduce using rule 29 (expression -> MINUS expression .)
    LAYER           reduce using rule 29 (expression -> MINUS expression .)
    RETURN          reduce using rule 29 (expression -> MINUS expression .)
    $end            reduce using rule 29 (expression -> MINUS expression .)
    RBRACE          reduce using rule 29 (expression -> MINUS expression .)
    COMMA           reduce using rule 29 (expression -> MINUS expression .)
    RPAREN          reduce using rule 29 (expression -> MINUS expression .)

  ! PLUS            [ shift and go to state 26 ]
  ! MINUS           [ shift and go to state 27 ]
  ! TIMES           [ shift and go to state 28 ]
  ! MATMUL          [ shift and go to state 29 ]


state 31

    (30) expression -> IDENTIFIER LPAREN . arguments RPAREN
    (32) arguments -> . expression_list
    (33) arguments -> . empty
    (34) expression_list -> . expression_list COMMA expression
    (35) expression_list -> . expression
    (43) empty -> .
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression MATMUL expression
    (29) expression -> . MINUS expression
    (30) expression -> . IDENTIFIER LPAREN arguments RPAREN
    (31) expression -> . TERNARYTENSOR LBRACKET integer_list RBRACKET LPAREN integer_list RPAREN
    (40) expression -> . IDENTIFIER
    (41) expression -> . INTEGER
    (42) expression -> . FLOAT

    RPAREN          reduce using rule 43 (empty -> .)
    MINUS           shift and go to state 18
    IDENTIFIER      shift and go to state 19
    TERNARYTENSOR   shift and go to state 20
    INTEGER         shift and go to state 21
    FLOAT           shift and go to state 22

    arguments                      shift and go to state 48
    expression_list                shift and go to state 49
    empty                          shift and go to state 50
    expression                     shift and go to state 51

state 32

    (31) expression -> TERNARYTENSOR LBRACKET . integer_list RBRACKET LPAREN integer_list RPAREN
    (36) integer_list -> . integer_list COMMA signed_integer
    (37) integer_list -> . signed_integer
    (38) signed_integer -> . INTEGER
    (39) signed_integer -> . MINUS INTEGER

    INTEGER         shift and go to state 54
    MINUS           shift and go to state 55

    integer_list                   shift and go to state 52
    signed_integer                 shift and go to state 53

state 33

    (9) declaration -> LET IDENTIFIER COLON type . ASSIGN expression
    (10) declaration -> LET IDENTIFIER COLON type .

    ASSIGN          shift and go to state 56
    LET             reduce using rule 10 (declaration -> LET IDENTIFIER COLON type .)
    IDENTIFIER      reduce using rule 10 (declaration -> LET IDENTIFIER COLON type .)
    LAYER           reduce using rule 10 (declaration -> LET IDENTIFIER COLON type .)
    RETURN          reduce using rule 10 (declaration -> LET IDENTIFIER COLON type .)
    $end            reduce using rule 10 (declaration -> LET IDENTIFIER COLON type .)
    RBRACE          reduce using rule 10 (declaration -> LET IDENTIFIER COLON type .)


state 34

    (20) type -> TRIT .

    ASSIGN          reduce using rule 20 (type -> TRIT .)
    LET             reduce using rule 20 (type -> TRIT .)
    IDENTIFIER      reduce using rule 20 (type -> TRIT .)
    LAYER           reduce using rule 20 (type -> TRIT .)
    RETURN          reduce using rule 20 (type -> TRIT .)
    $end            reduce using rule 20 (type -> TRIT .)
    RBRACE          reduce using rule 20 (type -> TRIT .)
    COMMA           reduce using rule 20 (type -> TRIT .)
    RPAREN          reduce using rule 20 (type -> TRIT .)
    LBRACE          reduce using rule 20 (type -> TRIT .)


state 35

    (21) type -> INT8 .

    ASSIGN          reduce using rule 21 (type -> INT8 .)
    LET             reduce using rule 21 (type -> INT8 .)
    IDENTIFIER      reduce using rule 21 (type -> INT8 .)
    LAYER           reduce using rule 21 (type -> INT8 .)
    RETURN          reduce using rule 21 (type -> INT8 .)
    $end            reduce using rule 21 (type -> INT8 .)
    RBRACE          reduce using rule 21 (type -> INT8 .)
    COMMA           reduce using rule 21 (type -> INT8 .)
    RPAREN          reduce using rule 21 (type -> INT8 .)
    LBRACE          reduce using rule 21 (type -> INT8 .)


state 36

    (22) type -> FLOAT16 .

    ASSIGN          reduce using rule 22 (type -> FLOAT16 .)
    LET             reduce using rule 22 (type -> FLOAT16 .)
    IDENTIFIER      reduce using rule 22 (type -> FLOAT16 .)
    LAYER           reduce using rule 22 (type -> FLOAT16 .)
    RETURN          reduce using rule 22 (type -> FLOAT16 .)
    $end            reduce using rule 22 (type -> FLOAT16 .)
    RBRACE          reduce using rule 22 (type -> FLOAT16 .)
    COMMA           reduce using rule 22 (type -> FLOAT16 .)
    RPAREN          reduce using rule 22 (type -> FLOAT16 .)
    LBRACE          reduce using rule 22 (type -> FLOAT16 .)


state 37

    (23) type -> FLOAT32 .

    ASSIGN          reduce using rule 23 (type -> FLOAT32 .)
    LET             reduce using rule 23 (type -> FLOAT32 .)
    IDENTIFIER      reduce using rule 23 (type -> FLOAT32 .)
    LAYER           reduce using rule 23 (type -> FLOAT32 .)
    RETURN          reduce using rule 23 (type -> FLOAT32 .)
    $end            reduce using rule 23 (type -> FLOAT32 .)
    RBRACE          reduce using rule 23 (type -> FLOAT32 .)
    COMMA           reduce using rule 23 (type -> FLOAT32 .)
    RPAREN          reduce using rule 23 (type -> FLOAT32 .)
    LBRACE          reduce using rule 23 (type -> FLOAT32 .)


state 38

    (24) type -> TERNARYTENSOR .

    ASSIGN          reduce using rule 24 (type -> TERNARYTENSOR .)
    LET             reduce using rule 24 (type -> TERNARYTENSOR .)
    IDENTIFIER      reduce using rule 24 (type -> TERNARYTENSOR .)
    LAYER           reduce using rule 24 (type -> TERNARYTENSOR .)
    RETURN          reduce using rule 24 (type -> TERNARYTENSOR .)
    $end            reduce using rule 24 (type -> TERNARYTENSOR .)
    RBRACE          reduce using rule 24 (type -> TERNARYTENSOR .)
    COMMA           reduce using rule 24 (type -> TERNARYTENSOR .)
    RPAREN          reduce using rule 24 (type -> TERNARYTENSOR .)
    LBRACE          reduce using rule 24 (type -> TERNARYTENSOR .)


state 39
